--- a/mobile.html
+++ b/mobile.html
@@ -136,7 +136,7 @@
                <p style="font-size:12px;line-height:15px;"><span style="font-size:15px;line-height:17.5px;font-weight:bold;">Apple </span><span style="font-size:15px;line-height:17.5px;">iPhone 11 </span></p>
                <p style="font-size:11px;line-height:12.5px;">128GB Фиолетовый</p>
                <p style="font-size:11px;line-height:12.5px;">&nbsp;</p>
-               <p style="font-size:12px;line-height:15px;font-weight:bold;"><span style="font-size:19px;line-height:24px;">56</span><span style="font-size:19px;line-height:24px;"> 990 </span><span style="font-size:19px;line-height:24px;">р.&nbsp; </span><span style="font-size:19px;line-height:24px;">&nbsp;</span><span style="text-decoration:line-through;font-weight:normal;color:#A9A9A9;">58</span><span style="text-decoration:line-through;font-weight:normal;color:#A9A9A9;"> 490 </span><span style="text-decoration:line-through;font-weight:normal;color:#A9A9A9;">р.</span></p></div>
+               <p style="font-size:12px;line-height:15px;font-weight:bold;"><span style="font-size:19px;line-height:24px;">56</span><span style="font-size:19px;line-height:24px;"> 990 </span><span style="font-size:19px;line-height:24px;">р.</span></p></div>
             <div id="wb_Image2">
                <img src="images/1_image (2).jpg" id="Image2" alt="" width="93" height="102"></div>
          </div>
@@ -158,14 +158,14 @@
       </div>
       <div id="Layer17">
          <div id="Layer17_Container">
+            <div id="wb_Image14">
+               <img src="images/Без именлщши-1.jpg" id="Image14" alt="" width="97" height="54"></div>
             <div id="wb_Text13">
-               <p><span style="font-weight:bold;">Xiaomi</span></p>
-               <p>Redmi Note 10S</p>
+               <p style="font-size:12px;line-height:15px;"><span style="font-weight:bold;">Xiaomi</span></p>
+               <p style="font-size:12px;line-height:15px;">Redmi Note 10S</p>
                <p style="font-size:11px;line-height:12.5px;"><span style="font-size:8px;line-height:10.5px;">6</span><span style="font-size:8px;line-height:10.5px;">/128GB Серый</span></p>
                <p style="font-size:11px;line-height:12.5px;">&nbsp;</p>
                <p style="font-size:11px;line-height:12.5px;font-weight:bold;"><span style="font-size:15px;line-height:17.5px;">20 990 </span><span style="font-size:15px;line-height:17.5px;">р.</span></p></div>
-            <div id="wb_Image14">
-               <img src="images/Без именлщши-1.jpg" id="Image14" alt="" width="97" height="54"></div>
          </div>
       </div>
       <div id="wb_Heading3">
@@ -203,8 +203,8 @@
             <div id="wb_Image3">
                <img src="images/Без именлщши-1.jpg" id="Image3" alt="" width="97" height="54"></div>
             <div id="wb_Text3">
-               <p><span style="font-weight:bold;">Xiaomi</span></p>
-               <p>Redmi Note 10S</p>
+               <p style="font-size:12px;line-height:15px;"><span style="font-weight:bold;">Xiaomi</span></p>
+               <p style="font-size:12px;line-height:15px;">Redmi Note 10S</p>
                <p style="font-size:11px;line-height:12.5px;"><span style="font-size:8px;line-height:10.5px;">6</span><span style="font-size:8px;line-height:10.5px;">/128GB Серый</span></p>
                <p style="font-size:11px;line-height:12.5px;">&nbsp;</p>
                <p style="font-size:11px;line-height:12.5px;font-weight:bold;"><span style="font-size:15px;line-height:17.5px;">20 990 </span><span style="font-size:15px;line-height:17.5px;">р.</span></p></div>
