--- a/mobile.html
+++ b/mobile.html
@@ -66,6 +66,16 @@
          event.preventDefault();
          $('html, body').stop().animate({ scrollTop: $('#Layer3').offset().top }, 600, 'linear');
       });
+      $("a[href*='#Layer6']").click(function(event)
+      {
+         event.preventDefault();
+         $('html, body').stop().animate({ scrollTop: $('#Layer6').offset().top }, 600, 'linear');
+      });
+      $("a[href*='#Layer10']").click(function(event)
+      {
+         event.preventDefault();
+         $('html, body').stop().animate({ scrollTop: $('#Layer10').offset().top }, 600, 'linear');
+      });
       $("a[href*='#Layer14']").click(function(event)
       {
          event.preventDefault();
@@ -76,11 +86,6 @@
          event.preventDefault();
          $('html, body').stop().animate({ scrollTop: $('#Layer15').offset().top }, 600, 'linear');
       });
-      $("a[href*='#Layer6']").click(function(event)
-      {
-         event.preventDefault();
-         $('html, body').stop().animate({ scrollTop: $('#Layer6').offset().top }, 600, 'linear');
-      });
       $("a[href*='#Layer7']").click(function(event)
       {
          event.preventDefault();
@@ -90,11 +95,6 @@
       {
          event.preventDefault();
          $('html, body').stop().animate({ scrollTop: $('#Layer8').offset().top }, 600, 'linear');
-      });
-      $("a[href*='#Layer10']").click(function(event)
-      {
-         event.preventDefault();
-         $('html, body').stop().animate({ scrollTop: $('#Layer10').offset().top }, 600, 'linear');
       });
       $("a[href*='#Layer11']").click(function(event)
       {
@@ -116,15 +116,14 @@
                <div id="wb_Image5">
                   <img src="images/Без имени-1.jpg" id="Image5" alt="" width="180" height="100"></div>
                <div id="wb_Text1">
-                  <p style="font-size:12px;line-height:15px;"><span style="font-size:15px;line-height:17.5px;font-weight:bold;">X</span><span style="font-size:15px;line-height:17.5px;font-weight:bold;">iaomi</span><span style="font-size:15px;line-height:17.5px;"> Redmi Note 10S</span></p>
-                  <p style="font-size:11px;line-height:12.5px;">6/128GB Серый</p>
+                  <p style="font-size:12px;line-height:15px;"><span style="font-size:19px;line-height:24px;font-weight:bold;">X</span><span style="font-size:19px;line-height:24px;font-weight:bold;">iaomi</span><span style="font-size:19px;line-height:24px;color:#000000;"> Redmi Note 10S</span></p>
+                  <p style="font-size:11px;line-height:12.5px;color:#000000;">6/128GB Серый</p>
                   <p style="font-size:11px;line-height:12.5px;">&nbsp;</p>
-                  <p style="font-size:11px;line-height:12.5px;">Экран AMOLED 6,43"</p>
-                  <p style="font-size:11px;line-height:12.5px;">Процессор MediaTek Helio G95</p>
-                  <p style="font-size:11px;line-height:12.5px;">Камера 64 МП</p>
+                  <p style="font-size:11px;line-height:12.5px;color:#000000;">Экран AMOLED 6,43"</p>
+                  <p style="font-size:11px;line-height:12.5px;color:#000000;">Процессор MediaTek Helio G95</p>
+                  <p style="font-size:11px;line-height:12.5px;color:#000000;">Камера 64 МП</p>
                   <p style="font-size:11px;line-height:12.5px;">&nbsp;</p>
-                  <p style="font-size:11px;line-height:12.5px;">&nbsp;</p>
-                  <p style="font-size:12px;line-height:15px;"><span style="font-size:19px;line-height:24px;font-weight:bold;">20 990 </span><span style="font-size:19px;line-height:24px;font-weight:bold;">р.</span><span style="font-size:15px;line-height:17.5px;font-weight:bold;">&nbsp;&nbsp; </span><span style="text-decoration:line-through;color:#A9A9A9;">22 490 р.</span></p></div>
+                  <p style="font-size:12px;line-height:15px;"><span style="font-size:27px;line-height:31.5px;font-weight:bold;">20 990 </span><span style="font-size:27px;line-height:31.5px;font-weight:bold;">р. </span><span style="font-size:15px;line-height:17.5px;font-weight:bold;">&nbsp; </span><span style="text-decoration:line-through;color:#A9A9A9;">22 490 р.</span></p></div>
             </div>
          </div></a>
       <div id="wb_Heading1">
@@ -136,7 +135,7 @@
                <p style="font-size:12px;line-height:15px;"><span style="font-size:15px;line-height:17.5px;font-weight:bold;">Apple </span><span style="font-size:15px;line-height:17.5px;">iPhone 11 </span></p>
                <p style="font-size:11px;line-height:12.5px;">128GB Фиолетовый</p>
                <p style="font-size:11px;line-height:12.5px;">&nbsp;</p>
-               <p style="font-size:12px;line-height:15px;font-weight:bold;"><span style="font-size:19px;line-height:24px;">56</span><span style="font-size:19px;line-height:24px;"> 990 </span><span style="font-size:19px;line-height:24px;">р.</span></p></div>
+               <p style="font-size:12px;line-height:15px;font-weight:bold;"><span style="font-size:19px;line-height:24px;">56</span><span style="font-size:19px;line-height:24px;"> 990 </span><span style="font-size:19px;line-height:24px;">р.&nbsp; </span><span style="font-size:19px;line-height:24px;">&nbsp;</span><span style="text-decoration:line-through;font-weight:normal;color:#A9A9A9;">58</span><span style="text-decoration:line-through;font-weight:normal;color:#A9A9A9;"> 490 </span><span style="text-decoration:line-through;font-weight:normal;color:#A9A9A9;">р.</span></p></div>
             <div id="wb_Image2">
                <img src="images/1_image (2).jpg" id="Image2" alt="" width="93" height="102"></div>
          </div>
@@ -150,22 +149,22 @@
                <img src="images/1_image (1).jpg" id="Image17" alt="" width="87" height="96"></div>
             <div id="wb_Text14">
                <p><span style="font-weight:bold;">Xiaomi</span></p>
-               <p>Redmi Note 10S</p>
-               <p style="font-size:8px;line-height:10.5px;">6/128GB Серый</p>
+               <p style="color:#000000;">Redmi Note 10S</p>
+               <p style="font-size:8px;line-height:10.5px;color:#000000;">6/128GB Серый</p>
                <p style="font-size:11px;line-height:12.5px;">&nbsp;</p>
                <p style="font-size:11px;line-height:12.5px;font-weight:bold;"><span style="font-size:15px;line-height:17.5px;">20</span><span style="font-size:15px;line-height:17.5px;"> 990 р. </span></p></div>
          </div>
       </div>
       <div id="Layer17">
          <div id="Layer17_Container">
-            <div id="wb_Image14">
-               <img src="images/Без именлщши-1.jpg" id="Image14" alt="" width="97" height="54"></div>
             <div id="wb_Text13">
-               <p style="font-size:12px;line-height:15px;"><span style="font-weight:bold;">Xiaomi</span></p>
-               <p style="font-size:12px;line-height:15px;">Redmi Note 10S</p>
-               <p style="font-size:11px;line-height:12.5px;"><span style="font-size:8px;line-height:10.5px;">6</span><span style="font-size:8px;line-height:10.5px;">/128GB Серый</span></p>
+               <p><span style="font-weight:bold;">Xiaomi</span></p>
+               <p style="color:#000000;">Redmi Note 10S</p>
+               <p style="font-size:11px;line-height:12.5px;color:#000000;"><span style="font-size:8px;line-height:10.5px;">6</span><span style="font-size:8px;line-height:10.5px;">/</span><span style="font-size:8px;line-height:10.5px;">128</span><span style="font-size:8px;line-height:10.5px;">GB Серый</span></p>
                <p style="font-size:11px;line-height:12.5px;">&nbsp;</p>
                <p style="font-size:11px;line-height:12.5px;font-weight:bold;"><span style="font-size:15px;line-height:17.5px;">20 990 </span><span style="font-size:15px;line-height:17.5px;">р.</span></p></div>
+            <div id="wb_Image14">
+               <img src="images/Без имени-1.jpg" id="Image14" alt="" width="97" height="54"></div>
          </div>
       </div>
       <div id="wb_Heading3">
@@ -192,8 +191,8 @@
                <img src="images/1_image (3).jpg" id="Image10" alt="" width="87" height="96"></div>
             <div id="wb_Text9">
                <p><span style="font-weight:bold;">Samsung</span>&nbsp;</p>
-               <p>Galaxy A22</p>
-               <p style="font-size:8px;line-height:10.5px;">4/128GB Белый</p>
+               <p style="color:#000000;">Galaxy A22</p>
+               <p style="font-size:8px;line-height:10.5px;color:#000000;">4/128GB Белый</p>
                <p style="font-size:11px;line-height:12.5px;">&nbsp;</p>
                <p style="font-size:11px;line-height:12.5px;font-weight:bold;"><span style="font-size:15px;line-height:17.5px;">20</span><span style="font-size:15px;line-height:17.5px;"> 990 р.&nbsp; </span></p></div>
          </div>
@@ -203,9 +202,9 @@
             <div id="wb_Image3">
                <img src="images/Без именлщши-1.jpg" id="Image3" alt="" width="97" height="54"></div>
             <div id="wb_Text3">
-               <p style="font-size:12px;line-height:15px;"><span style="font-weight:bold;">Xiaomi</span></p>
-               <p style="font-size:12px;line-height:15px;">Redmi Note 10S</p>
-               <p style="font-size:11px;line-height:12.5px;"><span style="font-size:8px;line-height:10.5px;">6</span><span style="font-size:8px;line-height:10.5px;">/128GB Серый</span></p>
+               <p><span style="font-weight:bold;">Samsung</span></p>
+               <p style="color:#000000;">Galaxy A22</p>
+               <p style="font-size:11px;line-height:12.5px;color:#000000;"><span style="font-size:8px;line-height:10.5px;">4/128GB Белый</span></p>
                <p style="font-size:11px;line-height:12.5px;">&nbsp;</p>
                <p style="font-size:11px;line-height:12.5px;font-weight:bold;"><span style="font-size:15px;line-height:17.5px;">20 990 </span><span style="font-size:15px;line-height:17.5px;">р.</span></p></div>
          </div>
@@ -217,32 +216,8 @@
                <img src="images/1_image (1).jpg" id="Image4" alt="" width="87" height="96"></div>
             <div id="wb_Text4">
                <p><span style="font-weight:bold;">Xiaomi</span></p>
-               <p>Redmi Note 10S</p>
-               <p style="font-size:8px;line-height:10.5px;">6/128GB Серый</p>
-               <p style="font-size:11px;line-height:12.5px;">&nbsp;</p>
-               <p style="font-size:11px;line-height:12.5px;font-weight:bold;"><span style="font-size:15px;line-height:17.5px;">20</span><span style="font-size:15px;line-height:17.5px;"> 990 р. </span></p></div>
-         </div>
-      </div>
-      <div id="Layer14">
-         <div id="Layer14_Container">
-            <div id="wb_Image15">
-               <img src="images/1_image (1).jpg" id="Image15" alt="" width="87" height="96"></div>
-            <div id="wb_Text15">
-               <p><span style="font-weight:bold;">Xiaomi</span></p>
-               <p>Redmi Note 10S</p>
-               <p style="font-size:8px;line-height:10.5px;">6/128GB Серый</p>
-               <p style="font-size:11px;line-height:12.5px;">&nbsp;</p>
-               <p style="font-size:11px;line-height:12.5px;font-weight:bold;"><span style="font-size:15px;line-height:17.5px;">20</span><span style="font-size:15px;line-height:17.5px;"> 990 р. </span></p></div>
-         </div>
-      </div>
-      <div id="Layer15">
-         <div id="Layer15_Container">
-            <div id="wb_Image16">
-               <img src="images/1_image (1).jpg" id="Image16" alt="" width="87" height="96"></div>
-            <div id="wb_Text16">
-               <p><span style="font-weight:bold;">Xiaomi</span></p>
-               <p>Redmi Note 10S</p>
-               <p style="font-size:8px;line-height:10.5px;">6/128GB Серый</p>
+               <p style="color:#000000;">Redmi Note 10S</p>
+               <p style="font-size:8px;line-height:10.5px;color:#000000;">6/128GB Серый</p>
                <p style="font-size:11px;line-height:12.5px;">&nbsp;</p>
                <p style="font-size:11px;line-height:12.5px;font-weight:bold;"><span style="font-size:15px;line-height:17.5px;">20</span><span style="font-size:15px;line-height:17.5px;"> 990 р. </span></p></div>
          </div>
@@ -257,6 +232,42 @@
                <p style="font-size:8px;line-height:10.5px;">128GB Зеленый</p>
                <p style="font-size:11px;line-height:12.5px;">&nbsp;</p>
                <p style="font-size:11px;line-height:12.5px;font-weight:bold;"><span style="font-size:15px;line-height:17.5px;">56 990 р. </span></p></div>
+         </div>
+      </div>
+      <div id="Layer10">
+         <div id="Layer10_Container">
+            <div id="wb_Image11">
+               <img src="images/1_image (3).jpg" id="Image11" alt="" width="87" height="96"></div>
+            <div id="wb_Text10">
+               <p><span style="font-weight:bold;">Samsung</span>&nbsp;</p>
+               <p style="color:#000000;">Galaxy A22</p>
+               <p style="font-size:8px;line-height:10.5px;color:#000000;">4/128GB Белый</p>
+               <p style="font-size:11px;line-height:12.5px;">&nbsp;</p>
+               <p style="font-size:11px;line-height:12.5px;font-weight:bold;"><span style="font-size:15px;line-height:17.5px;">20</span><span style="font-size:15px;line-height:17.5px;"> 990 р.&nbsp; </span></p></div>
+         </div>
+      </div>
+      <div id="Layer14">
+         <div id="Layer14_Container">
+            <div id="wb_Image15">
+               <img src="images/1_image (1).jpg" id="Image15" alt="" width="87" height="96"></div>
+            <div id="wb_Text15">
+               <p><span style="font-weight:bold;">Xiaomi</span></p>
+               <p style="color:#000000;">Redmi Note 10S</p>
+               <p style="font-size:8px;line-height:10.5px;color:#000000;">6/128GB Серый</p>
+               <p style="font-size:11px;line-height:12.5px;">&nbsp;</p>
+               <p style="font-size:11px;line-height:12.5px;font-weight:bold;"><span style="font-size:15px;line-height:17.5px;">20</span><span style="font-size:15px;line-height:17.5px;"> 990 р. </span></p></div>
+         </div>
+      </div>
+      <div id="Layer15">
+         <div id="Layer15_Container">
+            <div id="wb_Image16">
+               <img src="images/1_image (1).jpg" id="Image16" alt="" width="87" height="96"></div>
+            <div id="wb_Text16">
+               <p><span style="font-weight:bold;">Xiaomi</span></p>
+               <p style="color:#000000;">Redmi Note 10S</p>
+               <p style="font-size:8px;line-height:10.5px;color:#000000;">6/128GB Серый</p>
+               <p style="font-size:11px;line-height:12.5px;">&nbsp;</p>
+               <p style="font-size:11px;line-height:12.5px;font-weight:bold;"><span style="font-size:15px;line-height:17.5px;">20</span><span style="font-size:15px;line-height:17.5px;"> 990 р. </span></p></div>
          </div>
       </div>
       <div id="Layer7">
@@ -283,26 +294,14 @@
                <p style="font-size:11px;line-height:12.5px;font-weight:bold;"><span style="font-size:15px;line-height:17.5px;">56 990 р. </span></p></div>
          </div>
       </div>
-      <div id="Layer10">
-         <div id="Layer10_Container">
-            <div id="wb_Image11">
-               <img src="images/1_image (3).jpg" id="Image11" alt="" width="87" height="96"></div>
-            <div id="wb_Text10">
-               <p><span style="font-weight:bold;">Samsung</span>&nbsp;</p>
-               <p>Galaxy A22</p>
-               <p style="font-size:8px;line-height:10.5px;">4/128GB Белый</p>
-               <p style="font-size:11px;line-height:12.5px;">&nbsp;</p>
-               <p style="font-size:11px;line-height:12.5px;font-weight:bold;"><span style="font-size:15px;line-height:17.5px;">20</span><span style="font-size:15px;line-height:17.5px;"> 990 р.&nbsp; </span></p></div>
-         </div>
-      </div>
       <div id="Layer11">
          <div id="Layer11_Container">
             <div id="wb_Image12">
                <img src="images/1_image (3).jpg" id="Image12" alt="" width="87" height="96"></div>
             <div id="wb_Text11">
                <p><span style="font-weight:bold;">Samsung</span>&nbsp;</p>
-               <p>Galaxy A22</p>
-               <p style="font-size:8px;line-height:10.5px;">4/128GB Белый</p>
+               <p style="color:#000000;">Galaxy A22</p>
+               <p style="font-size:8px;line-height:10.5px;color:#000000;">4/128GB Белый</p>
                <p style="font-size:11px;line-height:12.5px;">&nbsp;</p>
                <p style="font-size:11px;line-height:12.5px;font-weight:bold;"><span style="font-size:15px;line-height:17.5px;">20</span><span style="font-size:15px;line-height:17.5px;"> 990 р.&nbsp; </span></p></div>
          </div>
@@ -313,8 +312,8 @@
                <img src="images/1_image (3).jpg" id="Image13" alt="" width="87" height="96"></div>
             <div id="wb_Text12">
                <p><span style="font-weight:bold;">Samsung</span>&nbsp;</p>
-               <p>Galaxy A22</p>
-               <p style="font-size:8px;line-height:10.5px;">4/128GB Белый</p>
+               <p style="color:#000000;">Galaxy A22</p>
+               <p style="font-size:8px;line-height:10.5px;color:#000000;">4/128GB Белый</p>
                <p style="font-size:11px;line-height:12.5px;">&nbsp;</p>
                <p style="font-size:11px;line-height:12.5px;font-weight:bold;"><span style="font-size:15px;line-height:17.5px;">20</span><span style="font-size:15px;line-height:17.5px;"> 990 р.&nbsp; </span></p></div>
          </div>
