--- a/mobile.html
+++ b/mobile.html
@@ -132,10 +132,10 @@
       <div id="Layer4">
          <div id="Layer4_Container">
             <div id="wb_Text2">
-               <p style="font-size:12px;line-height:15px;"><span style="font-size:15px;line-height:17.5px;font-weight:bold;">Apple </span><span style="font-size:15px;line-height:17.5px;">iPhone 11 </span></p>
-               <p style="font-size:11px;line-height:12.5px;">128GB Фиолетовый</p>
+               <p style="font-size:12px;line-height:15px;"><span style="font-size:15px;line-height:17.5px;font-weight:bold;">Apple</span><span style="font-size:15px;line-height:17.5px;font-weight:bold;color:#000000;">&nbsp;</span><span style="font-size:15px;line-height:17.5px;color:#000000;">iPhone 11 </span></p>
+               <p style="font-size:11px;line-height:12.5px;color:#000000;">128GB Фиолетовый</p>
                <p style="font-size:11px;line-height:12.5px;">&nbsp;</p>
-               <p style="font-size:12px;line-height:15px;font-weight:bold;"><span style="font-size:19px;line-height:24px;">56</span><span style="font-size:19px;line-height:24px;"> 990 </span><span style="font-size:19px;line-height:24px;">р.&nbsp; </span><span style="font-size:19px;line-height:24px;">&nbsp;</span><span style="text-decoration:line-through;font-weight:normal;color:#A9A9A9;">58</span><span style="text-decoration:line-through;font-weight:normal;color:#A9A9A9;"> 490 </span><span style="text-decoration:line-through;font-weight:normal;color:#A9A9A9;">р.</span></p></div>
+               <p style="font-size:12px;line-height:15px;font-weight:bold;color:#000000;"><span style="font-size:19px;line-height:24px;">56</span><span style="font-size:19px;line-height:24px;"> 990 </span><span style="font-size:19px;line-height:24px;">р.&nbsp; </span><span style="font-size:19px;line-height:24px;">&nbsp;</span><span style="text-decoration:line-through;font-weight:normal;color:#A9A9A9;">58</span><span style="text-decoration:line-through;font-weight:normal;color:#A9A9A9;"> 490 </span><span style="text-decoration:line-through;font-weight:normal;color:#A9A9A9;">р.</span></p></div>
             <div id="wb_Image2">
                <img src="images/1_image (2).jpg" id="Image2" alt="" width="93" height="102"></div>
          </div>
@@ -176,8 +176,8 @@
                <img src="images/1_image (2).jpg" id="Image6" alt="" width="87" height="96"></div>
             <div id="wb_Text5">
                <p><span style="font-weight:bold;">Apple</span>&nbsp;</p>
-               <p>iPhone 11</p>
-               <p style="font-size:8px;line-height:10.5px;">128GB Зеленый</p>
+               <p style="color:#000000;">iPhone 11</p>
+               <p style="font-size:8px;line-height:10.5px;color:#000000;">128GB Зеленый</p>
                <p style="font-size:11px;line-height:12.5px;">&nbsp;</p>
                <p style="font-size:11px;line-height:12.5px;font-weight:bold;"><span style="font-size:15px;line-height:17.5px;">56 990 р. </span></p></div>
          </div>
@@ -228,8 +228,8 @@
                <img src="images/1_image (2).jpg" id="Image7" alt="" width="87" height="96"></div>
             <div id="wb_Text6">
                <p><span style="font-weight:bold;">Apple</span>&nbsp;</p>
-               <p>iPhone 11</p>
-               <p style="font-size:8px;line-height:10.5px;">128GB Зеленый</p>
+               <p style="color:#000000;">iPhone 11</p>
+               <p style="font-size:8px;line-height:10.5px;color:#000000;">128GB Зеленый</p>
                <p style="font-size:11px;line-height:12.5px;">&nbsp;</p>
                <p style="font-size:11px;line-height:12.5px;font-weight:bold;"><span style="font-size:15px;line-height:17.5px;">56 990 р. </span></p></div>
          </div>
@@ -275,9 +275,9 @@
             <div id="wb_Image8">
                <img src="images/1_image (2).jpg" id="Image8" alt="" width="87" height="96"></div>
             <div id="wb_Text7">
-               <p><span style="font-weight:bold;">Apple</span>&nbsp;</p>
-               <p>iPhone 11</p>
-               <p style="font-size:8px;line-height:10.5px;">128GB Зеленый</p>
+               <p><span style="font-weight:bold;">Apple</span><span style="color:#000000;">&nbsp;</span></p>
+               <p style="color:#000000;">iPhone 11</p>
+               <p style="font-size:8px;line-height:10.5px;color:#000000;">128GB Зеленый</p>
                <p style="font-size:11px;line-height:12.5px;">&nbsp;</p>
                <p style="font-size:11px;line-height:12.5px;font-weight:bold;"><span style="font-size:15px;line-height:17.5px;">56 990 р. </span></p></div>
          </div>
@@ -287,9 +287,9 @@
             <div id="wb_Image9">
                <img src="images/1_image (2).jpg" id="Image9" alt="" width="87" height="96"></div>
             <div id="wb_Text8">
-               <p><span style="font-weight:bold;">Apple</span>&nbsp;</p>
-               <p>iPhone 11</p>
-               <p style="font-size:8px;line-height:10.5px;">128GB Зеленый</p>
+               <p><span style="font-weight:bold;">Apple</span><span style="color:#000000;">&nbsp;</span></p>
+               <p style="color:#000000;">iPhone 11</p>
+               <p style="font-size:8px;line-height:10.5px;color:#000000;">128GB Зеленый</p>
                <p style="font-size:11px;line-height:12.5px;">&nbsp;</p>
                <p style="font-size:11px;line-height:12.5px;font-weight:bold;"><span style="font-size:15px;line-height:17.5px;">56 990 р. </span></p></div>
          </div>
