--- a/mobile.html
+++ b/mobile.html
@@ -26,25 +26,10 @@
          start: 0
       };
       $("#Carousel1").carouseleffects(Carousel1Opts);
-      $("a[href*='#Layer1']").click(function(event)
-      {
-         event.preventDefault();
-         $('html, body').stop().animate({ scrollTop: $('#Layer1').offset().top-3 }, 600, 'linear');
-      });
-      $("a[href*='#Layer4']").click(function(event)
-      {
-         event.preventDefault();
-         $('html, body').stop().animate({ scrollTop: $('#Layer4').offset().top }, 600, 'linear');
-      });
       $("a[href*='#Layer13']").click(function(event)
       {
          event.preventDefault();
          $('html, body').stop().animate({ scrollTop: $('#Layer13').offset().top }, 600, 'linear');
-      });
-      $("a[href*='#Layer17']").click(function(event)
-      {
-         event.preventDefault();
-         $('html, body').stop().animate({ scrollTop: $('#Layer17').offset().top }, 600, 'linear');
       });
       $("a[href*='#Layer5']").click(function(event)
       {
@@ -55,11 +40,6 @@
       {
          event.preventDefault();
          $('html, body').stop().animate({ scrollTop: $('#Layer9').offset().top }, 600, 'linear');
-      });
-      $("a[href*='#Layer2']").click(function(event)
-      {
-         event.preventDefault();
-         $('html, body').stop().animate({ scrollTop: $('#Layer2').offset().top }, 600, 'linear');
       });
       $("a[href*='#Layer3']").click(function(event)
       {
@@ -106,40 +86,56 @@
          event.preventDefault();
          $('html, body').stop().animate({ scrollTop: $('#Layer12').offset().top }, 600, 'linear');
       });
+      $("a[href*='#Layer1']").click(function(event)
+      {
+         event.preventDefault();
+         $('html, body').stop().animate({ scrollTop: $('#Layer1').offset().top }, 600, 'linear');
+      });
+      $("a[href*='#Layer2']").click(function(event)
+      {
+         event.preventDefault();
+         $('html, body').stop().animate({ scrollTop: $('#Layer2').offset().top }, 600, 'linear');
+      });
+      $("a[href*='#Layer17']").click(function(event)
+      {
+         event.preventDefault();
+         $('html, body').stop().animate({ scrollTop: $('#Layer17').offset().top }, 600, 'linear');
+      });
+      $("a[href*='#Layer18']").click(function(event)
+      {
+         event.preventDefault();
+         $('html, body').stop().animate({ scrollTop: $('#Layer18').offset().top }, 600, 'linear');
+      });
+      $("a[href*='#Layer21']").click(function(event)
+      {
+         event.preventDefault();
+         $('html, body').stop().animate({ scrollTop: $('#Layer21').offset().top }, 600, 'linear');
+      });
+      $("a[href*='#Layer22']").click(function(event)
+      {
+         event.preventDefault();
+         $('html, body').stop().animate({ scrollTop: $('#Layer22').offset().top }, 600, 'linear');
+      });
+      $("a[href*='#Layer4']").click(function(event)
+      {
+         event.preventDefault();
+         $('html, body').stop().animate({ scrollTop: $('#Layer4').offset().top }, 600, 'linear');
+      });
+      $("a[href*='#Layer16']").click(function(event)
+      {
+         event.preventDefault();
+         $('html, body').stop().animate({ scrollTop: $('#Layer16').offset().top }, 600, 'linear');
+      });
+      $("a[href*='#Layer19']").click(function(event)
+      {
+         event.preventDefault();
+         $('html, body').stop().animate({ scrollTop: $('#Layer19').offset().top }, 600, 'linear');
+      });
    });
 </script>
 </head>
 <body>
    <div id="container">
-      <a href="http://sota.ru"><div id="Layer1">
-            <div id="Layer1_Container">
-               <div id="wb_Image5">
-                  <img src="images/Без имени-1.jpg" id="Image5" alt="" width="180" height="100"></div>
-               <div id="wb_Text1">
-                  <p style="font-size:12px;line-height:15px;"><span style="font-size:19px;line-height:24px;font-weight:bold;">X</span><span style="font-size:19px;line-height:24px;font-weight:bold;">iaomi</span><span style="font-size:19px;line-height:24px;color:#000000;"> Redmi Note 10S</span></p>
-                  <p style="font-size:11px;line-height:12.5px;color:#000000;">6/128GB Серый</p>
-                  <p style="font-size:11px;line-height:12.5px;">&nbsp;</p>
-                  <p style="font-size:11px;line-height:12.5px;color:#000000;">Экран AMOLED 6,43"</p>
-                  <p style="font-size:11px;line-height:12.5px;color:#000000;">Процессор MediaTek Helio G95</p>
-                  <p style="font-size:11px;line-height:12.5px;color:#000000;">Камера 64 МП</p>
-                  <p style="font-size:11px;line-height:12.5px;">&nbsp;</p>
-                  <p style="font-size:12px;line-height:15px;"><span style="font-size:27px;line-height:31.5px;font-weight:bold;">20 990 </span><span style="font-size:27px;line-height:31.5px;font-weight:bold;">р. </span><span style="font-size:15px;line-height:17.5px;font-weight:bold;">&nbsp; </span><span style="text-decoration:line-through;color:#A9A9A9;">22 490 р.</span></p></div>
-            </div>
-         </div></a>
-      <div id="wb_Heading1">
-         <h1 id="Heading1">ХИТ ПРОДАЖ</h1>
-      </div>
-      <div id="Layer4">
-         <div id="Layer4_Container">
-            <div id="wb_Text2">
-               <p style="font-size:12px;line-height:15px;"><span style="font-size:15px;line-height:17.5px;font-weight:bold;">Apple</span><span style="font-size:15px;line-height:17.5px;font-weight:bold;color:#000000;">&nbsp;</span><span style="font-size:15px;line-height:17.5px;color:#000000;">iPhone 11 </span></p>
-               <p style="font-size:11px;line-height:12.5px;color:#000000;">128GB Фиолетовый</p>
-               <p style="font-size:11px;line-height:12.5px;">&nbsp;</p>
-               <p style="font-size:12px;line-height:15px;font-weight:bold;color:#000000;"><span style="font-size:19px;line-height:24px;">56</span><span style="font-size:19px;line-height:24px;"> 990 </span><span style="font-size:19px;line-height:24px;">р.&nbsp; </span><span style="font-size:19px;line-height:24px;">&nbsp;</span><span style="text-decoration:line-through;font-weight:normal;color:#A9A9A9;">58</span><span style="text-decoration:line-through;font-weight:normal;color:#A9A9A9;"> 490 </span><span style="text-decoration:line-through;font-weight:normal;color:#A9A9A9;">р.</span></p></div>
-            <div id="wb_Image2">
-               <img src="images/1_image (2).jpg" id="Image2" alt="" width="93" height="102"></div>
-         </div>
-      </div>
       <div id="wb_Heading2">
          <h1 id="Heading2">Смартфоны XIAOMI</h1>
       </div>
@@ -153,18 +149,6 @@
                <p style="font-size:8px;line-height:10.5px;color:#000000;">6/128GB Серый</p>
                <p style="font-size:11px;line-height:12.5px;">&nbsp;</p>
                <p style="font-size:11px;line-height:12.5px;font-weight:bold;"><span style="font-size:15px;line-height:17.5px;">20</span><span style="font-size:15px;line-height:17.5px;"> 990 р. </span></p></div>
-         </div>
-      </div>
-      <div id="Layer17">
-         <div id="Layer17_Container">
-            <div id="wb_Text13">
-               <p><span style="font-weight:bold;">Xiaomi</span></p>
-               <p style="color:#000000;">Redmi Note 10S</p>
-               <p style="font-size:11px;line-height:12.5px;color:#000000;"><span style="font-size:8px;line-height:10.5px;">6</span><span style="font-size:8px;line-height:10.5px;">/</span><span style="font-size:8px;line-height:10.5px;">128</span><span style="font-size:8px;line-height:10.5px;">GB Серый</span></p>
-               <p style="font-size:11px;line-height:12.5px;">&nbsp;</p>
-               <p style="font-size:11px;line-height:12.5px;font-weight:bold;"><span style="font-size:15px;line-height:17.5px;">20 990 </span><span style="font-size:15px;line-height:17.5px;">р.</span></p></div>
-            <div id="wb_Image14">
-               <img src="images/Без имени-1.jpg" id="Image14" alt="" width="97" height="54"></div>
          </div>
       </div>
       <div id="wb_Heading3">
@@ -197,19 +181,7 @@
                <p style="font-size:11px;line-height:12.5px;font-weight:bold;"><span style="font-size:15px;line-height:17.5px;">20</span><span style="font-size:15px;line-height:17.5px;"> 990 р.&nbsp; </span></p></div>
          </div>
       </div>
-      <div id="Layer2">
-         <div id="Layer2_Container">
-            <div id="wb_Image3">
-               <img src="images/Без именлщши-1.jpg" id="Image3" alt="" width="97" height="54"></div>
-            <div id="wb_Text3">
-               <p><span style="font-weight:bold;">Samsung</span></p>
-               <p style="color:#000000;">Galaxy A22</p>
-               <p style="font-size:11px;line-height:12.5px;color:#000000;"><span style="font-size:8px;line-height:10.5px;">4/128GB Белый</span></p>
-               <p style="font-size:11px;line-height:12.5px;">&nbsp;</p>
-               <p style="font-size:11px;line-height:12.5px;font-weight:bold;"><span style="font-size:15px;line-height:17.5px;">20 990 </span><span style="font-size:15px;line-height:17.5px;">р.</span></p></div>
-         </div>
-      </div>
-      <a href="https://www.wysiwygwebbuilder.com" target="_blank"><img src="images/builtwithwwb17.png" alt="WYSIWYG Web Builder" style="position:absolute;left:0px;top:2696px;margin:0;border-width:0;z-index:250" width="16" height="16"></a>
+      <a href="https://www.wysiwygwebbuilder.com" target="_blank"><img src="images/builtwithwwb17.png" alt="WYSIWYG Web Builder" style="position:absolute;left:0px;top:3350px;margin:0;border-width:0;z-index:250" width="16" height="16"></a>
       <div id="Layer3">
          <div id="Layer3_Container">
             <div id="wb_Image4">
@@ -318,11 +290,109 @@
                <p style="font-size:11px;line-height:12.5px;font-weight:bold;"><span style="font-size:15px;line-height:17.5px;">20</span><span style="font-size:15px;line-height:17.5px;"> 990 р.&nbsp; </span></p></div>
          </div>
       </div>
+      <div id="Layer1">
+         <div id="Layer1_Container">
+            <div id="wb_Image5">
+               <img src="images/1_image (1).jpg" id="Image5" alt="" width="87" height="96"></div>
+            <div id="wb_Text1">
+               <p><span style="font-weight:bold;">Xiaomi</span></p>
+               <p style="color:#000000;">Redmi Note 10S</p>
+               <p style="font-size:8px;line-height:10.5px;color:#000000;">6/128GB Серый</p>
+               <p style="font-size:11px;line-height:12.5px;">&nbsp;</p>
+               <p style="font-size:11px;line-height:12.5px;font-weight:bold;"><span style="font-size:15px;line-height:17.5px;">20</span><span style="font-size:15px;line-height:17.5px;"> 990 р. </span></p></div>
+         </div>
+      </div>
+      <div id="Layer2">
+         <div id="Layer2_Container">
+            <div id="wb_Image14">
+               <img src="images/1_image (1).jpg" id="Image14" alt="" width="87" height="96"></div>
+            <div id="wb_Text2">
+               <p><span style="font-weight:bold;">Xiaomi</span></p>
+               <p style="color:#000000;">Redmi Note 10S</p>
+               <p style="font-size:8px;line-height:10.5px;color:#000000;">6/128GB Серый</p>
+               <p style="font-size:11px;line-height:12.5px;">&nbsp;</p>
+               <p style="font-size:11px;line-height:12.5px;font-weight:bold;"><span style="font-size:15px;line-height:17.5px;">20</span><span style="font-size:15px;line-height:17.5px;"> 990 р. </span></p></div>
+         </div>
+      </div>
+      <div id="Layer17">
+         <div id="Layer17_Container">
+            <div id="wb_Image20">
+               <img src="images/1_image (2).jpg" id="Image20" alt="" width="87" height="96"></div>
+            <div id="wb_Text17">
+               <p><span style="font-weight:bold;">Apple</span>&nbsp;</p>
+               <p style="color:#000000;">iPhone 11</p>
+               <p style="font-size:8px;line-height:10.5px;color:#000000;">128GB Зеленый</p>
+               <p style="font-size:11px;line-height:12.5px;">&nbsp;</p>
+               <p style="font-size:11px;line-height:12.5px;font-weight:bold;"><span style="font-size:15px;line-height:17.5px;">56 990 р. </span></p></div>
+         </div>
+      </div>
+      <div id="Layer18">
+         <div id="Layer18_Container">
+            <div id="wb_Image21">
+               <img src="images/1_image (2).jpg" id="Image21" alt="" width="87" height="96"></div>
+            <div id="wb_Text18">
+               <p><span style="font-weight:bold;">Apple</span>&nbsp;</p>
+               <p style="color:#000000;">iPhone 11</p>
+               <p style="font-size:8px;line-height:10.5px;color:#000000;">128GB Зеленый</p>
+               <p style="font-size:11px;line-height:12.5px;">&nbsp;</p>
+               <p style="font-size:11px;line-height:12.5px;font-weight:bold;"><span style="font-size:15px;line-height:17.5px;">56 990 р. </span></p></div>
+         </div>
+      </div>
+      <div id="Layer21">
+         <div id="Layer21_Container">
+            <div id="wb_Image24">
+               <img src="images/1_image (3).jpg" id="Image24" alt="" width="87" height="96"></div>
+            <div id="wb_Text21">
+               <p><span style="font-weight:bold;">Samsung</span>&nbsp;</p>
+               <p style="color:#000000;">Galaxy A22</p>
+               <p style="font-size:8px;line-height:10.5px;color:#000000;">4/128GB Белый</p>
+               <p style="font-size:11px;line-height:12.5px;">&nbsp;</p>
+               <p style="font-size:11px;line-height:12.5px;font-weight:bold;"><span style="font-size:15px;line-height:17.5px;">20</span><span style="font-size:15px;line-height:17.5px;"> 990 р.&nbsp; </span></p></div>
+         </div>
+      </div>
+      <div id="Layer22">
+         <div id="Layer22_Container">
+            <div id="wb_Image25">
+               <img src="images/1_image (3).jpg" id="Image25" alt="" width="87" height="96"></div>
+            <div id="wb_Text22">
+               <p><span style="font-weight:bold;">Samsung</span>&nbsp;</p>
+               <p style="color:#000000;">Galaxy A22</p>
+               <p style="font-size:8px;line-height:10.5px;color:#000000;">4/128GB Белый</p>
+               <p style="font-size:11px;line-height:12.5px;">&nbsp;</p>
+               <p style="font-size:11px;line-height:12.5px;font-weight:bold;"><span style="font-size:15px;line-height:17.5px;">20</span><span style="font-size:15px;line-height:17.5px;"> 990 р.&nbsp; </span></p></div>
+         </div>
+      </div>
+      <div id="Layer4">
+         <div id="Layer4_Container">
+            <div id="wb_Text3">
+               <p style="font-size:11px;line-height:12.5px;font-weight:bold;"><span style="font-size:15px;line-height:17.5px;">Больше моделей</span></p></div>
+         </div>
+      </div>
+      <div id="Layer16">
+         <div id="Layer16_Container">
+            <div id="wb_Text13">
+               <p style="font-size:11px;line-height:12.5px;font-weight:bold;"><span style="font-size:15px;line-height:17.5px;">Больше моделей</span></p></div>
+         </div>
+      </div>
+      <div id="Layer19">
+         <div id="Layer19_Container">
+            <div id="wb_Text19">
+               <p style="font-size:11px;line-height:12.5px;font-weight:bold;"><span style="font-size:15px;line-height:17.5px;">Больше моделей</span></p></div>
+         </div>
+      </div>
+   </div>
+   <div id="PageHeader2">
+      <div id="PageHeader2_Container">
+      </div>
    </div>
    <div id="PageHeader1">
       <div id="PageHeader1_Container">
          <div id="wb_Image1">
             <img src="images/лого.png" id="Image1" alt="" width="66" height="32"></div>
+         <div id="wb_Image2">
+            <img src="images/icons8-меню-48.png" id="Image2" alt="" width="30" height="30"></div>
+         <div id="wb_Image3">
+            <img src="images/icons8-поиск-48.png" id="Image3" alt="" width="30" height="30"></div>
       </div>
    </div>
    <div id="wb_Carousel1">
